--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/bud",
     "dev": "node --watch src/bud",
@@ -13,6 +14,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.2",
   "dependencies": {
-    "chalk": "^5.5.0"
+    "chalk": "^5.5.0",
+    "commander": "^14.0.0",
+    "diff": "^8.0.2"
   }
 }
